--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next": "15.4.4",
     "next-auth": "^4.24.11",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
