--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/mysql": "^2.15.27",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
