--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^12.1.0",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "next": "15.4.4",
