--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
-    "next": "15.4.4",
+    "next": "^15.4.8",
     "next-auth": "^4.24.11",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
