Fix Playwright E2E tests: SecurityError handling and test fixtures
- Add try-catch for localStorage/sessionStorage in clearSession()
- Add validUser/invalidUser aliases to test-data.ts
- Add firstName/lastName fields to all test users
- Convert setup-test-users.js to ES modules
- Add navigationLinks export for navigation tests
- Add test user setup documentation

Fixes: All 40 auth tests were failing due to SecurityError when accessing localStorage in Playwright context. Tests now pass the setup phase.

--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "fottball-eyeq",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 5000",
-    "build": "next build",
-    "start": "next start -H 0.0.0.0 -p 5000",
-    "lint": "next lint",
-    "test": "npx tsx --test tests/**/*.test.ts",
-    "test:api": "npx tsx --test tests/api/*.test.ts",
-    "test:e2e": "playwright test"
-  },
-  "dependencies": {
-    "aos": "^2.3.4",
-    "dotenv": "^17.2.3",
-    "firebase": "^12.1.0",
-    "firebase-admin": "^13.6.0",
-    "html-to-image": "^1.11.13",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.3",
-    "next": "^15.5.9",
-    "next-auth": "^4.24.11",
-    "qrcode": "^1.5.4",
-    "qrcode.react": "^4.2.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "resend": "^6.6.0",
-    "tsx": "^4.21.0",
-    "zod": "^4.2.1",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.49.1",
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/aos": "^3.0.7",
-    "@types/node": "^20",
-    "@types/qrcode": "^1.5.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.9",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+   "type": "module",
+   "name": "fottball-eyeq",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+       "dev": "next dev -H 0.0.0.0 -p 5000",
+  "build": "next build",
+  "start": "next start -H 0.0.0.0 -p 5000",
+  "lint": "next lint",
+  "test": "npx tsx --test tests/**/*.test.ts",
+  "test:api": "npx tsx --test tests/api/*.test.ts",
+  "test:e2e": "playwright test",
+  "setup-test-users": "node scripts/setup-test-users.js"
+   },
+   "dependencies": {
+      "aos": "^2.3.4",
+      "dotenv": "^17.2.3",
+      "firebase": "^12.1.0",
+      "firebase-admin": "^13.6.0",
+      "html-to-image": "^1.11.13",
+      "html2canvas": "^1.4.1",
+      "jspdf": "^3.0.3",
+      "next": "^15.5.9",
+      "next-auth": "^4.24.11",
+      "qrcode": "^1.5.4",
+      "qrcode.react": "^4.2.0",
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
+      "resend": "^6.6.0",
+      "tsx": "^4.21.0",
+      "zod": "^4.3.5",
+      "zustand": "^5.0.8"
+   },
+   "devDependencies": {
+      "@eslint/eslintrc": "^3",
+      "@playwright/test": "^1.49.1",
+      "@tailwindcss/postcss": "^4",
+      "@types/aos": "^3.0.7",
+      "@types/node": "^20",
+      "@types/qrcode": "^1.5.5",
+      "@types/react": "^19",
+      "@types/react-dom": "^19",
+      "eslint": "^9",
+      "eslint-config-next": "15.5.9",
+      "tailwindcss": "^4",
+      "typescript": "^5"
+   }
 }
